--- a/frontend/src/stylesheets/search_results.css
+++ b/frontend/src/stylesheets/search_results.css
@@ -2,6 +2,12 @@
     display: flex;
 }
 
+.loading-icon {
+    font-size: 50px;
+    color: #fff;
+    margin-top: 40px;
+}
+
 .result {
     flex-direction: row;
     justify-content: flex-start;
