--- a/frontend/src/stylesheets/search_results.css
+++ b/frontend/src/stylesheets/search_results.css
@@ -100,6 +100,11 @@
     width: 110px;
 }
 
+.show-btn, .movie-btn {
+    font-weight: bold;
+    min-width: 55px;
+}
+
 .error-message {
     font-size: 20px;
     font-weight: bold;
