--- a/frontend/src/stylesheets/search_results.css
+++ b/frontend/src/stylesheets/search_results.css
@@ -5,25 +5,26 @@
 .loading-icon {
   font-size: 50px;
   color: #fff;
-  margin-top: 40px;
+  margin: 5px 0 20px 0;
 }
 
 .result {
     flex-direction: row;
     justify-content: flex-start;
-    margin-top: 5px;
+    margin: 5px 0 20px 0;
     height: 250px;
     padding: 10px 16px;
     font-family: 'Montserrat', sans-serif;
     border-radius: 4px;
     border: 1px solid #2c2f33;
-    /* background: #99aab5; */
-    background: #fff;
+    background: #4d4d4d;
+    color: #fff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.34), 0 1px 5px 0 rgba(0,0,0,0.32), 0 3px 1px -2px rgba(0,0,0,0.4);
 }
 
 .result-left {
   flex-direction: column;
-  min-width: 250px;
+  min-width: 360px;
 }
 
 .result-left h1 {
@@ -35,7 +36,12 @@
 .poster-container {
   height: 100%;
   width: 90%;
-  background: red;
+}
+
+.result-backdrop {
+  height: 220px;
+  width: 350px;
+  border-radius: 4px;
 }
 
 .result-right {
@@ -45,6 +51,7 @@
 .right-inner {
   flex-direction: column;
   justify-content: space-between;
+  padding-left: 5px;
 }
 
 .result-details {
@@ -73,13 +80,15 @@
 }
 
 .result-description p {
+  height: 177px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 .providers-container {
-  padding-left: 10px;
-  border-left: 1px solid rgba(0, 0, 0, 0.8);
+  padding-left: 20px;
+  border-left: 1.5px solid lightgray;
+  border-radius: 1px;
 }
 
 .providers-container h1 {
