Styling and button functionality, fixed search errors

--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -1,6 +1,36 @@
 .navbar {
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 40px;
+    width: 45px;
+    margin: 5px 0 0 5px;
+    cursor: pointer;
+}
+
+.logo:hover {
+    width: 50px;
+    animation: shake 0.75s cubic-bezier(.36,.07,.19,.97) both;
+}
+
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+      
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    
+    30%, 50%, 70% {
+        transform: translate3d(-3px, 0, 0);
+    }
+    
+    40%, 60% {
+        transform: translate3d(3px, 0, 0);
+    }
 }
 
 .github-logo {
