--- a/frontend/src/stylesheets/search_results.css
+++ b/frontend/src/stylesheets/search_results.css
@@ -112,7 +112,15 @@
 
 .btn-dropdown {
     flex-direction: column;
-    height: 84px;
+}
+
+.show {
+  height: 84px;
+}
+
+.hide {
+  height: 40px;
+  margin-bottom: 44px;
 }
 
 .show button:last-child {
@@ -147,6 +155,6 @@
 .error-message {
   font-size: 20px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-bottom: 30px;
   color: red;
 }
