Fixed description styling

--- a/frontend/src/stylesheets/search_results.css
+++ b/frontend/src/stylesheets/search_results.css
@@ -81,7 +81,7 @@
 .result-description {
   overflow: hidden;
   text-overflow: ellipsis;
-  margin: 29px 10px 0 0;
+  margin: 29px 10px 15.5px 0;
 }
 
 .result-description h2 {
