--- a/frontend/src/stylesheets/queue_dropdown.css
+++ b/frontend/src/stylesheets/queue_dropdown.css
@@ -103,12 +103,41 @@
     margin: 0 10px 10px 0;
 }
 
-.queue-cost {
-    flex-direction: row;
-    margin-left: 16px;
+.calculator {
+    flex-direction: column;
+    align-items: center;
 }
 
-.queue-cost h2 {
+.calculator h1 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.calculator-btn {
+    font-size: 16px;
+    font-weight: bold;
+    height: 36px;
+    width: 75px;
+    margin-right: 5px;
+    background: #fff;
+    color: #2c2f33;
+    border-radius: 2px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.total-cost {
+    flex-direction: row;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+.total-cost h4 {
     font-weight: bold;
     margin-right: 5px;
+}
+
+.selected {
+    background: lightgray;
 }
