--- a/frontend/src/stylesheets/app.css
+++ b/frontend/src/stylesheets/app.css
@@ -1,67 +1,85 @@
 body {
-    background: #23272a;
+  background: #23272a;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .main-content {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .splash {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .app-name {
-    font-size: 70px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    margin: 110px 0 36px 0;
-    color: #fff;
+  font-size: 70px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin: 110px 0 36px 0;
+  color: #fff;
+}
+
+@keyframes color-rotate {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+
+.app-name:hover {
+  /* color: red; */
+  color: red;
+  animation: color-rotate 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  cursor: none;
 }
 
 .search {
-    width: 80%;
-    flex-direction: column;
-    align-items: center;
+  width: 80%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-bar {
-    height: 39.2px;
-    flex-direction: row;
-    /* border-radius: 4px; */
-    border-radius: 0 4px 4px 0;
-    background: #fff;
+  height: 39.2px;
+  flex-direction: row;
+  /* border-radius: 4px; */
+  border-radius: 0 4px 4px 0;
+  background: #fff;
 }
 
 .search-bar input {
-    height: 28px;
-    width: 410px;
-    font-size: 18px;
-    padding: 5px 10px;
-    /* border-radius: 4px; */
-    outline: none;
-    border: none;
+  height: 28px;
+  width: 410px;
+  font-size: 18px;
+  padding: 5px 10px;
+  /* border-radius: 4px; */
+  outline: none;
+  border: none;
 }
 
 .search-btn {
-    background: transparent;
-    outline: none;
-    border: none;
-    cursor: pointer;
+  background: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .search-bar svg {
-    font-size: 20px;
-    margin-right: 8px;
-    color: #818181;
+  font-size: 20px;
+  margin-right: 8px;
+  color: #818181;
 }
 
 .search-bar svg:hover {
-    color: #2e2e2e;
+  color: #2e2e2e;
 }
