--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -1,6 +1,14 @@
 .navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
     flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 2px;
+    background: rgba(19, 21, 22, 0.97);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.34), 0 1px 5px 0 rgba(0,0,0,0.32), 0 3px 1px -2px rgba(0,0,0,0.4);
 }
 
 .logo {
@@ -49,7 +57,7 @@
 .session-btns {
     flex-direction: row;
     align-items: center;
-    margin: 10px 20px 0 0;
+    margin: 16px 40px 0 0;
 }
 
 .session-btns a:hover {
