--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -11,6 +11,17 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.34), 0 1px 5px 0 rgba(0,0,0,0.32), 0 3px 1px -2px rgba(0,0,0,0.4);
 }
 
+#Streamlined_Logo {
+    height: 40px;
+    width: 45px;
+    margin: 5px 0 0 5px;
+    cursor: pointer;
+}
+
+#Streamlined_Logo:hover {
+    fill: #98abf3;
+}
+
 .logo {
     height: 40px;
     width: 45px;
@@ -41,10 +52,14 @@
     }
 }
 
-.github-logo {
-    width: 20px;
-    height: 20px;
-    fill: #fff;
+.github-icon {
+    font-size: 30px;
+    color: #fff;
+    margin: 0 0 8px 16px;
+}
+
+.github-icon:hover {
+    color: #98abf3;
 }
 
 .session-btns a {
@@ -65,15 +80,17 @@
 }
 
 .session-btns a:last-child {
-    margin-left: 10px;
+    margin-left: 16px;
 }
 
 .open-queue-btn, .logout-btn {
     font-size: 16px;
     font-weight: bold;
-    color: #fff;
     outline: none;
     border: none;
+    padding: 0;
+    margin-left: 16px;
+    color: #fff;
     background: transparent;
     cursor: pointer;
 }
